fix: page content overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@ html, body, #root {
 
 body {
   background: var(--color-background);
+  overflow: hidden;
 }
 
 #root {
