--- a/src/styles/teacher-form.css
+++ b/src/styles/teacher-form.css
@@ -1,6 +1,7 @@
 #page-teacher-form {
   width: 100vw;
   height: 100vh;
+  overflow-y: auto;
 }
 
 #page-teacher-form .page-header .header-content {
