--- a/src/styles/teacher-list.css
+++ b/src/styles/teacher-list.css
@@ -1,6 +1,7 @@
 #page-teacher-list {
   width: 100vw;
   height: 100vh;
+  overflow-y: auto;
 }
 
 #search-teachers {
